--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     api 'com.google.android.material:material:1.5.0'
     api 'androidx.constraintlayout:constraintlayout:2.1.3'
     api project(path: ':arch')
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
