--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,19 @@ android {
 
 dependencies {
 
-    api 'androidx.core:core-ktx:1.7.0'
-    api 'com.google.android.material:material:1.5.0'
-    api 'androidx.constraintlayout:constraintlayout:2.1.3'
+    api 'androidx.core:core-ktx:1.9.0'
+    api 'com.google.android.material:material:1.8.0'
+    api 'androidx.constraintlayout:constraintlayout:2.1.4'
     api project(path: ':arch')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    api 'androidx.appcompat:appcompat:1.6.1'
+    api('io.github.youth5201314:banner:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+    api ('com.github.cachapa:ExpandableLayout:2.9.2') {
+        exclude group: 'com.android.support'
+    }
+    api ('com.github.hackware1993:MagicIndicator:1.6.0') {
+        exclude group: 'com.android.support'
+    }
+    api 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.6' //shape绘制
 }
