--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,6 @@ dependencies {
         exclude group: 'com.android.support'
     }
     api 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.6' //shape绘制
-    api ('com.ethanhua:skeleton:1.1.2') {
-        exclude group: 'com.android.support'
-    }
     api 'io.supercharge:shimmerlayout:2.1.0'
+    api project(path: ':lib_skeleton')
 }
