--- a/arch/build.gradle
+++ b/arch/build.gradle
@@ -19,6 +19,7 @@ android {
 
 dependencies {
   api fileTree(dir: "libs", include: ["*.jar", "*.aar"])
+  api project(path: ':strict_databinding')
 
   testImplementation "junit:junit:4.13.2"
   androidTestImplementation "androidx.test.ext:junit:1.1.3"
@@ -30,7 +31,6 @@ dependencies {
 
   api 'com.github.KunMinX:UnPeek-LiveData:7.8.0'
   api 'com.github.KunMinX:Smooth-Navigation:v4.0.0'
-  api 'com.github.KunMinX.Strict-DataBinding:strict_databinding:5.6.0'
   api 'com.github.KunMinX.Strict-DataBinding:binding_state:5.6.0'
   api 'com.github.KunMinX.Strict-DataBinding:binding_recyclerview:5.6.0'
   api 'com.github.KunMinX:MVI-Dispatcher:7.4.0-beta'
