--- a/arch/build.gradle
+++ b/arch/build.gradle
@@ -5,43 +5,58 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdk appTargetSdk
     defaultConfig {
-    minSdk appMinSdk
-    targetSdk appTargetSdk
+        minSdk appMinSdk
+        targetSdk appTargetSdk
 
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-  }
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
 
-  buildFeatures {
-    dataBinding true
-  }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 
 dependencies {
-  api fileTree(dir: "libs", include: ["*.jar", "*.aar"])
+    api fileTree(dir: "libs", include: ["*.jar", "*.aar"])
 
     testImplementation "junit:junit:4.13.2"
-  androidTestImplementation "androidx.test.ext:junit:1.1.3"
-  androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
-  api "androidx.appcompat:appcompat:1.6.1"
-  api "org.jetbrains:annotations:23.0.0"
-  api "androidx.navigation:navigation-runtime:2.5.3"
+    api 'androidx.core:core-ktx:1.9.0'
+    api "androidx.appcompat:appcompat:1.6.1"
+    api "org.jetbrains:annotations:23.0.0"
+    api "androidx.navigation:navigation-runtime:2.5.3"
+    api 'com.google.android.material:material:1.8.0'
+    api 'androidx.constraintlayout:constraintlayout:2.1.4'
+    api 'androidx.paging:paging-runtime:3.2.0'
 
-  api 'com.github.KunMinX:UnPeek-LiveData:7.8.0'
-  api 'com.github.KunMinX:Smooth-Navigation:v4.0.0'
-  api 'com.github.KunMinX.Strict-DataBinding:binding_state:5.6.0'
-  api 'com.github.KunMinX.Strict-DataBinding:binding_recyclerview:5.6.0'
-  api 'com.github.KunMinX:MVI-Dispatcher:7.4.0-beta'
+    api 'com.github.KunMinX:UnPeek-LiveData:7.8.0'
+    api 'com.github.KunMinX:Smooth-Navigation:v4.0.0'
+    api 'com.github.KunMinX.Strict-DataBinding:binding_state:5.6.0'
+    api 'com.github.KunMinX.Strict-DataBinding:binding_recyclerview:5.6.0'
+    api 'com.github.KunMinX:MVI-Dispatcher:7.4.0-beta'
 
-  api "com.github.bumptech.glide:glide:4.14.2"
-  api "com.google.code.gson:gson:2.10.1"
+    api "com.github.bumptech.glide:glide:4.14.2"
+    api "com.google.code.gson:gson:2.10.1"
 
-  api "com.squareup.retrofit2:retrofit:2.9.0"
-  api "com.squareup.retrofit2:converter-gson:2.9.0"
-  api "com.squareup.okhttp3:logging-interceptor:4.10.0"
-  api "com.squareup.okhttp3:okhttp:4.10.0"
+    api "com.squareup.retrofit2:retrofit:2.9.0"
+    api "com.squareup.retrofit2:converter-gson:2.9.0"
+    api "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    api "com.squareup.okhttp3:okhttp:4.10.0"
 
-  api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-  api 'io.reactivex.rxjava2:rxjava:2.2.21'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'io.reactivex.rxjava2:rxjava:2.2.21'
+
+    api('io.github.youth5201314:banner:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+    api('com.github.cachapa:ExpandableLayout:2.9.2') {
+        exclude group: 'com.android.support'
+    }
+    api('com.github.hackware1993:MagicIndicator:1.6.0') {
+        exclude group: 'com.android.support'
+    }
+    api 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.6' //shape绘制
 }
