--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.MyTest"
         tools:targetApi="31">
         <activity
-            android:name=".ui.page.StoreDetailsActivity"
+            android:name=".ui.page.StoreDetailsFragment"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
