--- a/arch/build.gradle
+++ b/arch/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     api 'androidx.core:core-ktx:1.9.0'
     api "androidx.appcompat:appcompat:1.6.1"
     api "org.jetbrains:annotations:23.0.0"
-    api "androidx.navigation:navigation-runtime:2.5.3"
+    api "androidx.navigation:navigation-runtime-ktx:2.5.3"
     api 'com.google.android.material:material:1.8.0'
     api 'androidx.constraintlayout:constraintlayout:2.1.4'
     api 'androidx.paging:paging-runtime:3.2.0'
