--- a/arch/build.gradle
+++ b/arch/build.gradle
@@ -19,6 +19,7 @@ android {
 
 dependencies {
     api fileTree(dir: "libs", include: ["*.jar", "*.aar"])
+    api project(path: ':mvi-dispatch')
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
@@ -36,7 +37,6 @@ dependencies {
     api 'com.github.KunMinX:Smooth-Navigation:v4.0.0'
     api 'com.github.KunMinX.Strict-DataBinding:binding_state:5.6.0'
     api 'com.github.KunMinX.Strict-DataBinding:binding_recyclerview:5.6.0'
-    api 'com.github.KunMinX:MVI-Dispatcher:7.4.0-beta'
 
     api "com.github.bumptech.glide:glide:4.14.2"
     api "com.google.code.gson:gson:2.10.1"
