--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     api project(path: ':lib_skeleton')
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
 }
 
 // Allow references to generated code
