--- a/arch/build.gradle
+++ b/arch/build.gradle
@@ -20,6 +20,7 @@ android {
 dependencies {
     api fileTree(dir: "libs", include: ["*.jar", "*.aar"])
     api project(path: ':mvi-dispatch')
+    api project(path: ':lib_skeleton')
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
@@ -63,4 +64,6 @@ dependencies {
     api  'io.github.scwang90:refresh-header-classics:2.0.6'    //经典刷新头
 
     api 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'//流式布局layoutManager
+    api 'com.github.liangjingkanji:StateLayout:1.4.2'
+    api 'com.airbnb.android:lottie:5.1.1'
 }
