--- a/arch/build.gradle
+++ b/arch/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     api 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'//流式布局layoutManager
     api 'com.github.liangjingkanji:StateLayout:1.4.2'
     api 'com.airbnb.android:lottie:5.1.1'
+    api 'androidx.datastore:datastore-preferences:1.0.0'
 }
