--- a/arch/build.gradle
+++ b/arch/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     api 'com.google.android.material:material:1.8.0'
     api 'androidx.constraintlayout:constraintlayout:2.1.4'
     api 'androidx.paging:paging-runtime:3.2.0'
+    api 'androidx.fragment:fragment-ktx:1.6.1'
 
     api 'com.github.KunMinX:UnPeek-LiveData:7.8.0'
     api 'com.github.KunMinX:Smooth-Navigation:v4.0.0'
