--- a/module_store/src/main/AndroidManifest.xml
+++ b/module_store/src/main/AndroidManifest.xml
@@ -3,6 +3,6 @@
 
     <application>
         <activity android:name=".ui.page.StoreDetailsActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+            android:theme="@style/CustomTheme"/>
     </application>
 </manifest>
