--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,15 @@ android {
 
 dependencies {
     api project(path: ':module_store')
+    api 'com.alibaba:arouter-api:1.5.2'
+    kapt 'com.alibaba:arouter-compiler:1.2.1'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
 }
 
 // Allow references to generated code
 kapt {
-    correctErrorTypes = true
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
 }
