--- a/module_store/build.gradle
+++ b/module_store/build.gradle
@@ -41,6 +41,14 @@ android {
     }
 }
 
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
+
 dependencies {
     api project(path: ':module_common')
+    api 'com.alibaba:arouter-api:1.5.2'
+    kapt 'com.alibaba:arouter-compiler:1.2.1'
 }
