--- a/module_store/build.gradle
+++ b/module_store/build.gradle
@@ -1,7 +1,13 @@
 plugins {
-    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+}
+
+//注意gradle.properties中的数据类型都是String类型，使用其他数据类型需要自行转换
+if (isModule.toBoolean()){
+    apply plugin: 'com.android.application'
+}else {
+    apply plugin: 'com.android.library'
 }
 
 android {
@@ -10,6 +16,22 @@ android {
 
     defaultConfig {
         minSdk appMinSdk
+
+        if (isModule.toBoolean()) {
+            // 独立调试时添加 applicationId ，集成调试时移除
+            applicationId "com.kklv.store"
+        }
+    }
+
+    sourceSets {
+        main {
+            // 独立调试与集成调试时使用不同的 AndroidManifest.xml 文件
+            if (isModule.toBoolean()) {
+                manifest.srcFile 'src/main/moduleManifest/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+            }
+        }
     }
 
     buildTypes {
