--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,5 @@ include ':lib_skeleton'
 include ':mvi-dispatch'
 include ':module_store'
 include ':module_common'
+include ':module_store:export_store'
+include ':module_login'
