--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 dependencies {
     api project(path: ':module_store')
     api 'com.alibaba:arouter-api:1.5.2'
+    api project(path: ':module_login')
     kapt 'com.alibaba:arouter-compiler:1.2.1'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
