--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,5 @@ include ':module_store'
 include ':module_common'
 include ':module_store:export_store'
 include ':module_login'
+include ':arg_apt'
+include ':arg_library'
